[tool.poetry]
name = "pocketlint"
version = "0.1.0"
description = "Telegram bot to retrieve items from https://getpocket.com/"
authors = ["Tai Lucas <tglucas@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.scripts]
app = "app.__main__:main"

[tool.poetry.dependencies]
python = "^3.10"
awscli = "^1.27.69"
pocket = "^0.3.6"
python-telegram-bot = "^20.1"
sentry-sdk = "^1.15.0"
simplejson = "^3.18.3"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.11"}
pylib = {path = "pylib"}
pycryptodome = "^3.17"
aiosqlite = "^0.19.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
